.happypack/s-913401521
SyntaxError: Unexpected token (137:17)

[0m [90m 135 | [39m                  [33m<[39m[33m/[39m[33mdiv[39m[33m>[39m
 [90m 136 | [39m                ))}
[31m[1m>[22m[39m[90m 137 | [39m                {[36mvar[39m fff [33m=[39m [35m3[39m}
 [90m     | [39m                 [31m[1m^[22m[39m
 [90m 138 | [39m
 [90m 139 | [39m                [33m<[39m[33mListItem[39m
 [90m 140 | [39m                  primaryText[33m=[39m{record[33m.[39mcategory}[0m

BabelLoaderError: SyntaxError: Unexpected token (137:17)

[0m [90m 135 | [39m                  [33m<[39m[33m/[39m[33mdiv[39m[33m>[39m
 [90m 136 | [39m                ))}
[31m[1m>[22m[39m[90m 137 | [39m                {[36mvar[39m fff [33m=[39m [35m3[39m}
 [90m     | [39m                 [31m[1m^[22m[39m
 [90m 138 | [39m
 [90m 139 | [39m                [33m<[39m[33mListItem[39m
 [90m 140 | [39m                  primaryText[33m=[39m{record[33m.[39mcategory}[0m

    at transpile (/home/leo/htdocs/bio/node_modules/babel-loader/lib/index.js:61:13)
    at Object.module.exports (/home/leo/htdocs/bio/node_modules/babel-loader/lib/index.js:163:20)
    at applySyncOrAsync (/home/leo/htdocs/bio/node_modules/happypack/lib/applyLoaders.js:341:21)
    at apply (/home/leo/htdocs/bio/node_modules/happypack/lib/applyLoaders.js:268:5)
    at /home/leo/htdocs/bio/node_modules/happypack/lib/applyLoaders.js:131:7
    at applyPitchLoader (/home/leo/htdocs/bio/node_modules/happypack/lib/applyLoaders.js:184:14)
    at applyPitchLoader (/home/leo/htdocs/bio/node_modules/happypack/lib/applyLoaders.js:192:14)
    at applyPitchLoaders (/home/leo/htdocs/bio/node_modules/happypack/lib/applyLoaders.js:222:4)
    at applyLoaders (/home/leo/htdocs/bio/node_modules/happypack/lib/applyLoaders.js:116:3)
    at HappyWorker.compile (/home/leo/htdocs/bio/node_modules/happypack/lib/HappyWorker.js:32:3)